Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
   body {
     margin: 0;
     padding: 0;
-    font-family: 'Comic Sans MS', cursive, sans-serif;
+    font-family: 'Fredoka One', sans-serif;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     transition: background 1s, color 0.5s;
   }
+
+  @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 
   .container {
     flex: 1;
@@ -156,7 +158,6 @@
   <button class="boton" onclick="empezarJuego()">Iniciar Juego</button>
   <button class="boton" onclick="resetear()">Volver</button>
 </div>
-
 
 <!-- Pantalla revelar -->
 <div id="screen-revelar" class="screen">
